# oftra

./: .gitignore  LICENSE  README.md  __main__.py  pyproject.toml
app/: oftra_app.py
data/: __init__.py  config.json  delta_sink.py  json_source.py  processor.py  sink.py  test_commands.sql  workflow.json  workflow_empower14.0.1.json  workflow_empower14.json  workflow_empower14_streaming.json  workflow_empower14_streaming_count_by_project.json  workflow_explode.json
docs/: DESIGN.md  class_diagram.drawio
oftra/: __init__.py  oftra_app.py
oftra/app/: oftra_app.py
oftra/config/: oftra_config.py
oftra/context/: oftra_context.py
oftra/core/app/: oftra_app.py
oftra/core/config/: config_reader.py  oftra_config.py
oftra/core/context/: application_context.py
oftra/core/dag/: bag.py  depth_forst_order.py  edgeweighted_digraph.py  stack.py  topological.py
oftra/core/workflow/: node.py  workflow.py
oftra/data/: component.py  delta_sink.py  delta_source.py  explode_columns_processor.py  json_source.py  processor.py  sink.py  source.py  sql_processor.py
oftra/oftra/core/config/: config_provider.py
oftra/oftra/core/dag/: directed_edge.py  edgeweighted_digraph_cycle.py
oftra/spark/: spark_app.py  spark_application_context.py  spark_config_provider.py  spark_workflow.py
oftra/spark/utils/: schema_utils.py
oftra/spark/workflow/: __init__.py  csv_source.py  delta_sink.py  delta_source.py  json_source.py  schemadiff_processor.py  sink.py  source.py  sql_processor.py  workflow_factory.py
oftra/workflow/: workflow.py
workflow/: workflow.py
(+8 files in other folders)
